Mon Mar 14 12:21:03 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb (TkRTTimer): forgot to reset the callback
	  time. So, 'continue' do all callbacks between 'stop' and 'continue'.

Mon Mar 14 00:13:49 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb (TkRTTimer): correct calculation of offset
	  value. get a little better accuracy. 

	* ext/tk/sample/demos-en/widget: use a binding with no local variables 
	  when eval a sample script.

	* ext/tk/sample/demos-en/bind.rb: ditto.

	* ext/tk/sample/demos-en/tcolor: ditto.

	* ext/tk/sample/demos-jp/widget: ditto.

	* ext/tk/sample/demos-jp/bind.rb: ditto.

	* ext/tk/sample/demos-jp/tcolor: ditto.

Sun Mar 13 22:19:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (recursive_pop): raise TypeError instead of fatal error.
	  fixed: [ruby-dev:25843]

Sun Mar 13 10:09:17 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: remove test_gc. [ruby-dev:25871]

Sun Mar 13 02:32:54 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_ssl.c (ossl_tmp_dh_callback): should get DH
	  parameter from the current SSL object.

Sun Mar 13 02:09:03 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_pkey_dh.c (ossl_create_dh): fix typo.
	  patch from IWATSUKI Hiroyuki. [ruby-dev:25867]

	* ext/openssl/ossl_ssl.c (ossl_tmp_dh_callback): ditto.
	  (ossl_call_tmp_dh_callback): ditto

Thu Mar 10 19:10:29 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (lib_eventloop_ensure): mis-delete a timer handler
	  when exit from a recursive called eventloop

	* ext/tk/lib/tk/timer.rb: new TkRTTimer class, which can works for a
	  realtime operation

	* ext/tk/sample/tkrttimer.rb: sample of TkRTTimer class

	* ext/tk/lib/tk/textmark.rb: move  TkTextMark#+ and TkTextMark#- to
	  TkText::IndexModMethods

	* ext/tk/lib/tk/text.rb: improve TkTextMark#+ and TkTextMark#-, and
	  add them to TkText::IndexModMethods module
